# stellarsplit-smartcontracts

./: .env.example  .gitignore  Cargo.toml  README.md
contracts/settlement/: Cargo.toml
contracts/settlement/src/: lib.rs
contracts/split_pool/: Cargo.toml
contracts/split_pool/src/: lib.rs
contracts/token_router/: Cargo.toml
contracts/token_router/src/: lib.rs
