[package]
name = "settlement"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
split_pool = { path = "../split_pool" }
token_router = { path = "../token_router" }

[dev-dependencies]
soroban-sdk = { workspace = true }
split_pool = { path = "../split_pool" }
token_router = { path = "../token_router" }
